[team] Fix draggable leeks on Firefox https://bugzilla.mozilla.org/show_bug.cgi?id=1177704

--- a/src/global.scss
+++ b/src/global.scss
@@ -191,9 +191,6 @@ textarea {
 	font-family: "Roboto";
 	font-size: 15px;
 }
-[draggable] {
-	user-select: none;
-}
 .button {
 	display: inline-block;
 	position: relative;
